# YOLOs-CPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: FindCTrackCustom.cmake  FindOnnxRuntime.cmake  FramerConfig.cmake.in
examples/: CMakeLists.txt  camera_inference.cpp  camera_inference_seg.cpp  exports.h.in  image_inference.cpp  image_inference_seg.cpp  video_inference.cpp  video_inference_seg.cpp
include/: utils.hpp
include/det/: YOLO10.hpp  YOLO11.hpp  YOLO12.hpp  YOLO5.hpp  YOLO7.hpp  YOLO8.hpp  YOLO9.hpp
include/seg/: YOLO11Seg.hpp
include/tools/: Config.hpp  ScopedTimer.hpp
include/utils/: boundedthreadsafequeue.hpp  debug.hpp  detection.hpp  scopedtimer.hpp  segmentation.hpp  utils.hpp
scripts/: setup_models.py  yolos_quantization.py
